# quick_n_dirty_mp

./: README.md  pyproject.toml  setup.cfg  setup.py
qdmp/: Handler.py  PoolHandler.py  ProcessHandler.py  README.md  __init__.py  sample_functions.py
src/qdmp/: Handler.py  PoolHandler.py  ProcessHandler.py  __init__.py  sample_functions.py
