[metadata]
attr: qdmp.VERSION
name = qdmp
description = boilerplate code for asynchronous multiprocessing.
long_description = file: README.md
author = Alexander Sotoudeh
author_email = alisot200@gmail.com
keywords = python, multiprocessing, asynchronous, ProcessPoolExecutor, ThreadPoolExecutor, Machine Learning, producer-consumer, embedded
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = False
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires =

[options.packages.find]
where=src